# google-camera-proxy

./: .env  .gitconfig  .gitignore  Cargo.toml  rtsp-ffplay.log.save
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/: main.rs
src/smartdevicemanagement/: api.rs  client.rs  mod.rs
src/smartdevicemanagement/test_data/: device-list-response.json  generate-rtsp-stream.json
