[package]
name = "google-camera-proxy"
version = "0.1.0"
authors = ["Fredrik Skogberg <freskog@gmail.com>"]
edition = "2021"

[dependencies]
glib = "0.16.2"
gst = { package = "gstreamer", version = "0.19.1" }
gst-rtsp = { package = "gstreamer-rtsp", version = "0.19.0"}
gst-rtsp-server =  { package = "gstreamer-rtsp-server", version = "0.19.0" }
gst-sdp = { package = "gstreamer-sdp", version = "0.19.0" }
anyhow = "1"
derive_more = "0.99.17"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
dirs = "4"
async-std = { version = "1", features = ["attributes", "tokio1"] }
yup-oauth2 = "8"
reqwest = { version = "0.11.13", features = ["json"] }
hyper-rustls = "0.23.1"
hyper = "0.14.23"
video-rs = { version = "0.1", features = ["ndarray"] }